rust/transpiler/snapshots/edge_cases@html_entities@injections.snap
---
source: transpiler/tests/golden_tests.rs
expression: "serde_json::json!({\n    \"ranges\": result.ranges, \"injections\": result.injections,\n})"
input_file: transpiler/tests/edge_cases/html_entities.hyper
---
injections:
  - end: 531
    prefix: "from hyper import escape, replace_markers\n\ndef HtmlEntities() -> str:\n    _parts = []\n    _parts.append(f\"\"\"<p>&lt;script&gt; is escaped</p><p>Ampersand: &amp;</p><p>Non-breaking space: hello&nbsp;world</p><p>Copyright: &copy; 2024</p><p>Registered: &reg;</p><p>Trademark: &trade;</p><p>Dollar: &#36;100</p><p>Euro: &euro;50</p><p>Pound: &pound;30</p><p>Yen: &yen;1000</p><p>&quot;quoted&quot;</p><p>&apos;single&apos;</p><p>&ldquo;smart quotes&rdquo;</p><p>&#60;angle brackets&#62;</p><p>&#x3C;hex entities&#x3E;</p><p>&copy; ‹ESCAPE:{"
    start: 525
    suffix: "}› All rights reserved</p>\"\"\")\n    return replace_markers(\"\".join(_parts))\n"
    type: python
ranges:
  - compiled_end: 540
    compiled_start: 536
    range_type: Python
    source_end: 531
    source_start: 525
