rust/transpiler/snapshots/edge_cases@keyword_content@injections.snap
---
source: transpiler/tests/golden_tests.rs
expression: "serde_json::json!({\n    \"ranges\": result.ranges, \"injections\": result.injections,\n})"
input_file: transpiler/tests/edge_cases/keyword_content.hyper
---
injections: []
ranges: []
