rust/transpiler/snapshots/edge_cases@keyword_content@output.snap
---
source: transpiler/tests/golden_tests.rs
expression: r.code.trim()
input_file: transpiler/tests/edge_cases/keyword_content.hyper
---
def KeywordContent() -> str:
    _parts = []
    _parts.append("""<p>for example, this is just text</p><div>if you think about it, this makes sense</div><pre>class warfare is a political term</pre><span>while we wait, have some tea</span><article>try our new product today</article><p>match the following pairs</p><blockquote>with great power comes great responsibility</blockquote><p>def initely the best approach</p>""")
    return "".join(_parts)
