rust/transpiler/snapshots/edge_cases@svg@injections.snap
---
source: transpiler/tests/golden_tests.rs
expression: "serde_json::json!({\n    \"ranges\": result.ranges, \"injections\": result.injections,\n})"
input_file: transpiler/tests/edge_cases/svg.hyper
---
injections:
  - end: 514
    prefix: "from hyper import escape, replace_markers\n\ndef Svg(color: str, size: int, points: list) -> str:\n    _parts = []\n    _parts.append(f\"\"\"<svg width=\"{size}\" height=\"{size}\" viewBox=\"0 0 100 100\"><circle cx=\"50\" cy=\"50\" r=\"40\" fill=\"{color}\" /></svg><svg width=\"200\" height=\"200\" xmlns=\"http://www.w3.org/2000/svg\"><rect x=\"10\" y=\"10\" width=\"80\" height=\"80\" fill=\"{color}\" /><circle cx=\"100\" cy=\"100\" r=\"50\" stroke=\"{color}\" fill=\"none\" /><line x1=\"0\" y1=\"0\" x2=\"200\" y2=\"200\" stroke=\"black\" /><text x=\"100\" y=\"150\" text-anchor=\"middle\">‹ESCAPE:{"
    start: 509
    suffix: ""
    type: python
  - end: 786
    prefix: "}›</text></svg><svg viewBox=\"0 0 100 100\"><path d=\"M {points[0][0]} {points[0][1]} L {points[1][0]} {points[1][1]}\" stroke=\"{color}\" /></svg><svg width=\"100\" height=\"100\"><style>.shape { fill: ‹ESCAPE:{"
    start: 781
    suffix: "}›; }</style><rect class=\"shape\" width=\"100\" height=\"100\" /></svg>\"\"\")\n    _parts.append(\"<svg width=\\\"500\\\" height=\\\"100\\\">\")\n    for i, point in enumerate(points):\n        _parts.append(\"\"\"<circle cx=\"{i * 50 + 25}\" cy=\"50\" r=\"20\" fill=\"{color}\" />\"\"\")\n    _parts.append(\"</svg>\")\n    return replace_markers(\"\".join(_parts))\n"
    type: python
ranges:
  - compiled_end: 61
    compiled_start: 51
    range_type: Python
    source_end: 10
    source_start: 0
  - compiled_end: 72
    compiled_start: 63
    range_type: Python
    source_end: 20
    source_start: 11
  - compiled_end: 86
    compiled_start: 74
    range_type: Python
    source_end: 33
    source_start: 21
  - compiled_end: 547
    compiled_start: 542
    range_type: Python
    source_end: 514
    source_start: 509
  - compiled_end: 754
    compiled_start: 749
    range_type: Python
    source_end: 786
    source_start: 781
