rust/transpiler/snapshots/edge_cases@unicode@output.snap
---
source: transpiler/tests/golden_tests.rs
expression: r.code.trim()
input_file: transpiler/tests/edge_cases/unicode.hyper
---
from hyper import escape, replace_markers

def Unicode(emoji: str, name: str) -> str:
    _parts = []
    _parts.append(f"""<span>Hello 👋</span><span>Stars: ⭐⭐⭐</span><span>‹ESCAPE:{emoji}›</span><span>‹ESCAPE:{'⭐' * 5}›</span><p lang="zh">你好世界</p><p lang="ja">こんにちは</p><p lang="ko">안녕하세요</p><p dir="rtl" lang="ar">مرحبا بالعالم</p><p dir="rtl" lang="he">שלום עולם</p><p>‹ESCAPE:{name}›: 你好, مرحبا, שלום</p><span>En dash: –</span><span>Em dash: —</span><span>Ellipsis: …</span><span>Quotes: "quoted"</span><span>Arrows: ← → ↑ ↓</span><span>Math: ∞ ≠ ≤ ≥ ± × ÷</span>""")
    return replace_markers("".join(_parts))
