rust/transpiler/snapshots/errors@block_in_paragraph@error.snap
---
source: transpiler/tests/golden_tests.rs
expression: "format!(\"{}\", e)"
input_file: transpiler/tests/errors/block_in_paragraph.hyper
---
<div> cannot appear inside <p>.
