rust/transpiler/snapshots/errors@duplicate_attribute@error.snap
---
source: transpiler/tests/golden_tests.rs
expression: "format!(\"{}\", e)"
input_file: transpiler/tests/errors/duplicate_attribute.hyper
---
"class" is set twice on this element.
